<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardForAQ</string>
    <string name="action_settings">Settings</string>
    <string name="sarah_to_aq_salutation">Cher AQ ♥</string>
    <string name="sarah_to_aq_body">When I first met you as the TA next to my table during the HTML/CSS bootcamp, I wish I was at your table. I was amazed at your dedication and support, inspired by your words of encouragement. The more I got to know you, the more I said to myself I want to be like you, a strong-minded and soft-hearted individual. I will miss you dearly but won\'t be too sad as I know you will be back. In the meantime, let\'s keep in contact til we meet again in person. À bientôt!!</string>
    <string name="sarah_to_aq_closing">Bien à vous\nSarah H. Kim</string>
    <string name="thank_you_for">THANK YOU FOR</string>
    <string name="dear_aq">OUR DEAREST AQ,</string>
    <string name="yuliya">Yuliya</string>
    <string-array name="qualities">
        <item>SUPPORT</item>
        <item>PATIENCE</item>
        <item>LOVE</item>
        <item>Being with us</item>
        <item>Helping us grow</item>
        <item>Believing in us</item>
        <item>Making us a family</item>
    </string-array>
    <string name="johnmessage"> Je l\'ai appris que en tout pays, il y a une lieue de mauvais chemin.
        Que on ne fait pas d\'omelette sans casser des œufs. Mas les petits ruisseaux font les grandes rivieres.
    Les jours se suivent et ne se ressemblent pas. Il n\'y a que les montagnes qui ne se rencontrent jamais. Merci pour tout.
    Au revoir, Alex. Apres la pluie, le beau temps. -John</string>
    <string name="message_jose">An aura that can be felt through walls, a smile to be seen from across an ocean, a laugh that resonates through the largest of rooms, and a positive spirit that can uplift the gloomiest of individuals; these are the qualities that make up a person who is an absolute joy to be around, and these are the qualities I see when I look at you AQ. I\'m ultimately indebted to the universe for creating such a wonderful spirit and to you for all you\'ve done for us. I wish you nothing but the best on this next chapter of your life; and remember this isn\'t goodbye, it\'s "See you later". ♥  </string>

    <string name="hans_letter_header">Dear AQ,</string>

    <string name="hans_letter_body">I am sorry for your departure, I learned a lot from you. Not only about
    programming but how to push forward and to be more positive on this grand journey of life. I wish you the best of
    luck in any thing you do. I am ever so thankful for meeting someone like you. Thank you alex for everything. </string>

    <string name="hans_letter_ending">From:Hans(Hanbi) Choi</string>

    <string name="aq">!!AQ!!</string>
    <string name="message">I\'m sorry to hear that you have to go, but don\'t worry.
        See this as a vacation and get a chance to see your family and friends that care about you.
We will all miss you here in America so much! Thanks for your awesome support in us and we\'ll see you soon!   </string>
    <string name="sincerely">Bon Voyage,</string>
    <string name="myname">Joshelyn V. XD</string>
    <string name="rosemary_msg">
        You have been there for us since the beginning,you\'ve never given up on us and you\'ve helped us grow immensely.
        Thank you for your time and effort towards us. Thank you for sharing your knowledge. Thank you for making us laugh.
        Thank you for not only being someone to look towards to for help to become successful in this program,
        but for being someone really cool and inspiring to be around....and just plain Thank you...
        for everything you have done for us! Your motivational think pieces, your talks,
        as well as your presence have definitely left us better than you found us!</string>


</resources>
