<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/music"
    >

    <ImageView
        android:id="@+id/jvimageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/pic_joshelyn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aq"
        android:textStyle="bold"
        android:textSize="45dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="#D97064"
        android:background="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/message"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#81D88A"
        android:background="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sincerely"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="#81D88A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myname"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:textColor="#8BD37F"
        android:background="#000000"/>


    <ImageView
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:src="@drawable/joshelyn_sailor_cats"/>

</LinearLayout>

