<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageOfHans"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hans_pic"/>
            <TextView
                android:id="@+id/headerForHans"
                android:layout_gravity="start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hans_letter_header"/>
            <TextView
                android:id="@+id/bodyForHans"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hans_letter_body"/>
            <TextView
                android:id="@+id/closingForHans"
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hans_letter_ending"/>


        </LinearLayout>

    </ScrollView>


</android.support.v7.widget.CardView>

