<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#30265c">

            <TextView
                android:id="@+id/salutation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/sarah_to_aq_salutation"
                android:textColor="#dea19b"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/pic"
                android:layout_toStartOf="@+id/pic"
                android:text="@string/sarah_to_aq_body"
                android:textColor="#c0d7db" />

            <TextView
                android:id="@+id/closing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/body"
                android:layout_toStartOf="@+id/pic"
                android:text="@string/sarah_to_aq_closing"
                android:textColor="#ebdbfb" />


            <ImageView
                android:id="@+id/pic"
                android:layout_width="167dp"
                android:layout_height="250dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/salutation"
                android:src="@drawable/pic_sarah" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>