<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#009688"
            android:orientation="vertical">


            <TextView
                android:id="@+id/our"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/dear_aq"
                android:textColor="#212121"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/thank"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="15dp"
                android:text="@string/thank_you_for"
                android:textColor="#212121"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="0.5"/>

            <TextSwitcher
                android:id="@+id/textSwitcher"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/dotsuttonNext"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/dots"
                    android:onClick="yuliyaActivity"
                    android:gravity="center"
                    android:layout_marginLeft="150dp"/>

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/start"
                    android:onClick="yuliyaActivity"
                    android:layout_gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/love"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yuliya"
                android:textColor="#212121"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>